# sharepoint-checker

./: .env.example  .gitignore  README.md  ShortRequirements.txt  pyproject.toml  sharepoint_checker_implementation_plan.md
.claude/: CLAUDE.md
config/: checker-config.yaml  my-config.yaml
docs/: entra-app-setup-delegated.md  entra-app-setup.md  graph-api-postman-examples.md  validation-flow.md
improvements/: report-improvements.md
src/sharepoint_checker/: auth.py  cli.py  config.py  folder_scanner.py  graph_client.py  library_resolver.py  site_discovery.py
src/sharepoint_checker/models/: __init__.py  config_models.py  result_models.py
src/sharepoint_checker/orchestration/: run_checker.py
src/sharepoint_checker/reporting/: __init__.py  csv_report.py  email_notifier.py  html_report.py  json_report.py  teams_notifier.py  xlsx_report.py
src/sharepoint_checker/utils/: logging.py  patterns.py  retry.py
src/sharepoint_checker/validators/: __init__.py  file_validator.py  folder_validator.py  naming_validator.py
tests/fixtures/: sample_graph_responses.py
tests/integration/: README.md
tests/unit/: test_config.py  test_graph_client.py  test_reporting.py  test_site_discovery.py  test_validators.py
